# OpenTracker

./: .gitignore  makefile  trackerscompare.cpp
cftracker/: CMakeLists.txt  README.md  cftracker-config.cmake.in
cftracker/cftracker/common/: common.hpp  datatype.hpp  debug.hpp  ffttools.cpp  ffttools.hpp  metrics.cpp  metrics.hpp  recttools.hpp
cftracker/cftracker/feature/: feature_data.hpp  feature_extractor.cpp  feature_extractor.hpp  feature_operator.cpp  feature_operator.hpp  feature_parameter.hpp  fhog.cpp  fhog.hpp  gradient.cpp  gradient.hpp
cftracker/cftracker/feature/simd/: gradient.cpp
cftracker/cftracker/filters/: scale_filter.cpp  scale_filter.hpp  scale_parameter.hpp
cftracker/cftracker/trackers/: base_tracker.cpp  base_tracker.hpp
cftracker/cftracker/trackers/eco/: eco_parameter.hpp  eco_tracker.cpp  eco_tracker.hpp  eco_trainer.cpp  eco_trainer.hpp  interpolator.cpp  interpolator.hpp  optimize_scores.cpp  optimize_scores.hpp  regularization_filter.cpp  regularization_filter.hpp  sample_update.cpp  sample_update.hpp
cftracker/cftracker/trackers/kcf/: kcf_parameter.hpp  kcf_tracker.cpp  kcf_tracker.hpp
cftracker/common/: datatype.hpp  debug.hpp  ffttools.cpp  ffttools.hpp  metrics.cpp  metrics.hpp  recttools.hpp  wrappers.hpp
cftracker/examples/: run_tracker.cpp
cftracker/feature/: feature_data.hpp  feature_extractor.cpp  feature_extractor.hpp  feature_operator.cpp  feature_operator.hpp  feature_parameter.hpp  fhog.cpp  fhog.hpp  gradient.cpp  gradient.hpp
cftracker/feature/model/: imagenet-vgg-m-2048.prototxt
cftracker/filters/: scale_filter.cpp  scale_filter.hpp  scale_parameter.hpp
cftracker/scripts/: run_tracker.sh
cftracker/tools/: runecotracker.cpp
cftracker/trackers/: base_tracker.cpp  base_tracker.hpp
cftracker/trackers/eco/: eco_parameter.hpp  eco_tracker.cpp  eco_tracker.hpp  eco_trainer.cpp  eco_trainer.hpp  interpolator.cpp  interpolator.hpp  optimize_scores.cpp  optimize_scores.hpp  regularization_filter.cpp  regularization_filter.hpp  sample_update.cpp  sample_update.hpp
eco/: eco.cc  feature_extractor.cc  fhog.cc  fhog.hpp  runecotracker.cc  scale_filter.cc
example/: run_opentracker_example.cc
inputs/: readdatasets.cc  readvideo.cc  readvideo.hpp
kcf/: ffttools.hpp  fhog.cpp  fhog.hpp  kcftracker.cpp  runkcftracker.cpp
opencvtrackers/: runopencvtrackers.cpp
